# ecommerce-appplication

backend/: .env.example  Taskfile.yml  pyproject.toml
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/auth/: auth.py
backend/api/v1/category/: __init__.py  category.py
backend/api/v1/product/: __init__.py  product.py
backend/api/v1/user/: user.py
backend/app/controllers/: auth.py  category.py  product.py
backend/app/models/: __init__.py  category.py  product.py  user.py
backend/app/repositories/: __init__.py  category.py  product.py  user.py
backend/app/schemas/extra/: token.py
backend/app/stores/: __init__.py  revoked_token_store.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  base.py  session.py
backend/core/dependencies/: __init__.py  auth.py  controller.py  get_role.py  redis.py  repository.py  security.py  session.py  user.py
backend/core/exceptions/: jwt_exceptions.py
backend/core/factory/: __init__.py  controller.py  repository.py
backend/core/redis/: client.py
backend/core/repository/: base.py
backend/core/security/: __init__.py  jwt_service.py  password.py
backend/core/utils/: __init__.py  cookies.py  pagination.py
backend/migrations/: env.py
backend/migrations/versions/: 0940c9bf5334_init_models.py  0e726b6f7a97_init_models.py  2b247c2787db_init_models.py  641eeca263cf_updated_the_field.py  688d31653d76_init_models.py  9c2eea887c3c_category_model.py  baf6b010b146_updated_the_relationship.py  c02cf7493093_updated_the_category.py
(+99 files in other folders)
